Fixed the slides overflowing their comtainer

--- a/style.css
+++ b/style.css
@@ -1381,7 +1381,8 @@ html {
 .join-business {
   padding-top: 12rem;
   background-color: #f1f3f5;
-  height: 1000px;
+  height: fit-content;
+  padding-bottom: 40px;
 }
 
 .join-business>h2 {
@@ -1402,7 +1403,7 @@ html {
 }
 
 .helpful-resources {
-  padding-top: 7rem;
+  padding-top: 0;
 }
 
 .helpful-resources>h2 {
